[package]
name = "bench-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.4.0", features = [
    "rayon",
    "plotters",
    "cargo_bench_support",
    "html_reports",
] }
rpds = "*"
im-rc = "*"
rand = "0.8.5"
itertools = "0.10.5"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "vector"
harness = false
